--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
       <label for="input">Type!</label>
       <input type="text" id="input" />
     </div>
+    <button class="start">Start</button>
     <button class="reset">Reset</button>
   </main>
 </body>
