--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
       <label for="input">Type!</label>
       <input type="text" id="input" />
     </div>
-    <button class="start">Start</button>
-    <button class="reset">Reset</button>
+    <button class="start">New Game</button>
+    <!-- <button class="reset">Reset</button> -->
   </main>
 </body>
 </html>
