--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
     Attempts Remaining: <span class="remaining">6</span>
   </div>
   <div class="hanger">
+    <div class="bank">
 
+    </div>
   </div>
   <main class="container">
     <div class="word">
-      <h3>Guess the Word!</h3>
+      <h3>Type Letters to Guess the Word!</h3>
       <h3 class="unknown"></h3>
     </div>
     <div class="top-row row">
@@ -65,8 +67,8 @@
     <div class="input-form">
       <label for="input">Type!</label>
       <input type="text" id="input" />
+      <button class="start">New Game</button>
     </div>
-    <button class="start">New Game</button>
     <!-- <button class="reset">Reset</button> -->
   </main>
 </body>
