--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
       Attempts Remaining: <span class="remaining">6</span>
     </div>
     <div class="hanger">
+      <img src="/Users/adamkaufman/Desktop/Hangman Images/Bar.png" class="bar">
+      <img src="/Users/adamkaufman/Desktop/Hangman Images/Head.png" class="head">
+      <img src="/Users/adamkaufman/Desktop/Hangman Images/Body.png" class="body">
+      <img src="/Users/adamkaufman/Desktop/Hangman Images/Left Arm.png" class="larm">
+      <img src="/Users/adamkaufman/Desktop/Hangman Images/Right Arm.png" class="rarm">
+      <img src="/Users/adamkaufman/Desktop/Hangman Images/Left Leg.png" class="lleg">
+      <img src="/Users/adamkaufman/Desktop/Hangman Images/Right Leg.png" class="rleg">
       <div class="bank"></div>
     </div>
     <main class="container">
