--- a/index.html
+++ b/index.html
@@ -14,19 +14,20 @@
       Attempts Remaining: <span class="remaining">6</span>
     </div>
     <div class="hanger">
-      <img src="/Users/adamkaufman/Desktop/Hangman Images/Bar.png" class="bar">
+      <!-- <img src="/Users/adamkaufman/Desktop/Hangman Images/Bar.png" class="bar">
       <img src="/Users/adamkaufman/Desktop/Hangman Images/Head.png" class="head">
       <img src="/Users/adamkaufman/Desktop/Hangman Images/Body.png" class="body">
       <img src="/Users/adamkaufman/Desktop/Hangman Images/Left Arm.png" class="larm">
       <img src="/Users/adamkaufman/Desktop/Hangman Images/Right Arm.png" class="rarm">
       <img src="/Users/adamkaufman/Desktop/Hangman Images/Left Leg.png" class="lleg">
-      <img src="/Users/adamkaufman/Desktop/Hangman Images/Right Leg.png" class="rleg">
+      <img src="/Users/adamkaufman/Desktop/Hangman Images/Right Leg.png" class="rleg"> -->
       <div class="bank"></div>
     </div>
     <main class="container">
       <div class="word">
         <h3>Type Letters to Guess the Word!</h3>
         <h3 class="unknown"></h3>
+        <h3 class="line">This word has <span class="count">#</span> letters</h3>
       </div>
       <div class="top-row row">
         <div class="letter" data-letter="q">q</div>
