--- a/index.html
+++ b/index.html
@@ -4,18 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hangman</title>
+    <title>Word Guess</title>
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
   </head>
   <body>
-    <h1>Hangman</h1>
-    <div class="attempts">
-      Attempts Remaining: <span class="remaining">6</span>
-    </div>
-    <div class="scores">
-      <div class="wins">Win Count: <span class="dubs">0</span></div>
-      <div class="losses">Loss Count: <span class="wrong">0</span></div>
+    <h1>Word Guess</h1>
+    <div class="group">
+      <div class="attempts">
+        Attempts Remaining: <span class="remaining">6</span>
+      </div>
+      <div class="scores">
+        <div class="wins">Win Count: <span class="dubs">0</span></div>
+        <div class="losses">Loss Count: <span class="wrong">0</span></div>
+      </div>
     </div>
     <main class="container">
       <div class="word">
@@ -34,9 +36,6 @@
         <div class="letter" data-letter="i">i</div>
         <div class="letter" data-letter="o">o</div>
         <div class="letter" data-letter="p">p</div>
-        <!-- <div class="letter" data-letter="[">[</div>
-      <div class="letter" data-letter="]">]</div>
-      <div class="letter" data-letter="\">\</div> -->
       </div>
       <div class="mid-row row">
         <div class="letter" data-letter="a">a</div>
@@ -48,8 +47,6 @@
         <div class="letter" data-letter="j">j</div>
         <div class="letter" data-letter="k">k</div>
         <div class="letter" data-letter="l">l</div>
-        <!-- <div class="letter" data-letter=";">;</div>
-      <div class="letter" data-letter="'">'</div> -->
       </div>
       <div class="bot-row row">
         <div class="letter" data-letter="z">z</div>
@@ -59,17 +56,13 @@
         <div class="letter" data-letter="b">b</div>
         <div class="letter" data-letter="n">n</div>
         <div class="letter" data-letter="m">m</div>
-        <!-- <div class="letter" data-letter=",">,</div>
-      <div class="letter" data-letter=".">.</div>
-      <div class="letter" data-letter="/">/</div> -->
       </div>
 
       <div class="input-form">
-        <label for="input">Type!</label>
+        <label for="input"></label>
         <input type="text" id="input" autofocus="autofocus" />
         <button class="start">New Game</button>
       </div>
-      <!-- <button class="reset">Reset</button> -->
     </main>
   </body>
 </html>
